fix på spill detajer siden

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -181,8 +181,59 @@ body{
   grid-column-end: 2;
 
 
+  p{
+    font-size: 20px;
+    font-weight: bold;
+  }
+
+  a{
+          background-color: #333;
+          color: #fff;
+          padding: 16px 32px;
+          font-size: 20px;
+          margin: 4px 2px;
+          transition: 0.5s;
+          font-weight: bold;
+          border-radius: 15px;
+          text-decoration: none;
+          float: right;
+          margin-bottom: 5rem;
+          
+}
+          a:hover{
+            background-color: #fff;
+            color: #333; 
+            font-size: 25px;
+            }
+            
+  
+
+  .ImgCont{
+    position: relative;
+    max-width: 1459.55px;
+    border: #222 solid 1rem;
+    border-bottom: none;
+
+
+  }
+
   img{
     max-width: 100%;
     max-height: 821px;
   }
+
+  .AboutGame{
+    background-color: rgba(0,0,0, 0.7);
+    padding: 1%;
+    font-size: 20px;
+    font-weight: 100;
+    text-align: left;
+    word-wrap: break-word;
+    position: absolute;
+    bottom: -2.4%;
+    left: 0%;
+    right: 0%;
+    max-width: 1459.55px;
+    color: white;
   }
+}
